--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -34,34 +34,34 @@ We used data from the Breeding Bird Survey [@pardieck2019] to evaluate trends in
 
 ##  Estimated size data
 
-BBS contains abundances for all species along a route in each year, but does not include measurements of individual body size. We generated body size estimates for individual birds assuming that intraspecific size distributions are normally distributed around a species’ mean body size (following @thibault2011). Using records of species’ mean and standard deviation body sizes from @dunning2008, we drew individuals’ body sizes from the appropriate normal distributions. For species for which there was not a standard deviation recorded in @dunning2008 (185 species affected, of 421 total), we estimated the standard deviation based on an allometric scaling relationship between mean and standard deviation in body mass ($log(variance) = -5.273 + (log(mass) * 1.995))$; model R2 .86; see also @thibault2011). For species with multiple records in @dunning2008, we used the mean mean and standard deviation body sizes across all records (averaging across sexes, subspecies, and records from different locations). We performed this averaging after estimating any missing standard deviation measurements. For each individual bird observed, we estimated metabolic rate as $10.5 * (mass ^.713)$ [@fristoe2015; @nagy2005; @mcnab2009]. For each route in a given year, we compute total energy use, total biomass, and total abundance by summing over all individuals observed on that route in that year. This method does not incorporate intraspecific variation in body size across geographies or over time [@dunning2008; @gardner2011]. However, it makes it possible to conduct macroecological studies of avian size distributions at a spatial and temporal scale that would otherwise be impossible [@thibault2011].
+BBS contains abundances for all species along a route in each year, but does not include measurements of individual body size. We generated body size estimates for individual birds assuming that intraspecific size distributions are normally distributed around a species’ mean body size (following @thibault2011). Using records of species’ mean and standard deviation body sizes from @dunning2008, we drew individuals’ body sizes from the appropriate normal distributions. For species for which there was not a standard deviation recorded in @dunning2008 (185 species affected, of 421 total), we estimated the standard deviation using an allometric scaling relationship between mean and standard deviation in body mass constructed by fitting a linear model to the records in our dataset that did have mean and standard deviation measurements (resulting in the scaling relationship $log(variance) = -5.273 + (log(mass) * 1.995))$; model R2 .86; see also @thibault2011). For species with multiple records in @dunning2008, we used the mean mean and standard deviation body sizes across all records (averaging across sexes, subspecies, and records from different locations). We performed this averaging after estimating any missing standard deviation measurements. For each individual bird observed, we estimated metabolic rate as $10.5 * (mass ^.713)$ [@fristoe2015; @nagy2005; @mcnab2009]. For each route in a given year, we compute total energy use, total biomass, and total abundance by summing over all individuals observed on that route in that year. This method does not incorporate intraspecific variation in body size across geographies or over time [@dunning2008; @gardner2011]. However, it makes it possible to conduct macroecological studies of avian size distributions at a spatial and temporal scale that would otherwise be impossible [@thibault2011].
 
 ## Comparing abundance- and size- based currencies
 
-Comparing trends across different currencies is a nontrivial statistical challenge. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transform or rescaling each currency to a mean of 0 and a standard deviation of 1; @gotelli2017; @dornelas2014) destroys necessary information about the degree of variability within each currency. 
+Comparing trends across different currencies is a nontrivial statistical problem. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transformation, or rescaling each currency to a mean of 0 and a standard deviation of 1) destroys information about the degree of variability within each currency that is necessary in order to make comparisons *between* currencies for the same system. 
 
-Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we use a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
+Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we used a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
 
 $P(s_i) = \frac{\sum_t^T{\frac{n_{i, t}}{N_t}}}{T}$
 
-where $n_{i, t}$ is the abundance of species $i$ in timestep $t$, $N_t$ is the total abundance of all species in timestep $t$, and $T$ is the total number of timesteps. For each timestep $t$, we randomly assigned species' identities to the observed number of individuals $N_t$ by drawing with replacement from a multinomial distribution with probabilities weighted according to $P(s)$ for all species. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This estimates the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. We refer to these dynamics as "abundance-driven" dynamics. 
+where $n_{i, t}$ is the abundance of species $i$ in timestep $t$, $N_t$ is the total abundance of all species in timestep $t$, and $T$ is the total number of timesteps. For each timestep $t$, we randomly assigned species' identities to the observed number of individuals $N_t$ by drawing with replacement from a multinomial distribution with probabilities weighted according to $P(s)$ for all species. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This characterizes the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. We refer to these dynamics as "abundance-driven" dynamics. 
 
 ## Long-term trends
 
 For each route, we evaluated the 30-year trend in biomass (or energy use) and compared this to the trend derived from the "abundance-driven" null model using generalized linear models with a Gamma family and log link (appropriate for strictly-positive response variables such as biomass or total metabolic flux). We fit four models to characterize 1) the trend in biomass (or energy use) over time and 2) whether this trend deviates from the trend expected given only changes in abundance:
 
-1. `biomass ~ year * source`, in which "source" refers to being either the "observed" or "abundance-driven" value. This model fits a slope and intercept for the observed trend in  biomass (or energy use) over time, and a separate slope and intercept for the trend drawn from the abundance-driven, or null model, dynamics.
-2. `biomass ~ year + source`. This model fits a separate intercept, but not slope, for the abundance-driven and observed dynamics.
+1. `biomass ~ year * dynamics`, in which "dynamics" refers to being either the "observed" or "abundance-driven" (null model) dynamics. This model fits a slope and intercept for the observed trend in  biomass (or energy use) over time, and a separate slope and intercept for the trend drawn from the abundance-driven, or null model, dynamics.
+2. `biomass ~ year + dynamics`. This model fits a separate intercept, but not slope, for the abundance-driven and observed dynamics. These models were never selected as the best-performing descriptions of community dynamics.
 3. `biomass ~ year`. This model fits a temporal trend, but does not fit separate trends for the observed and abundance-driven dynamics.
 4. `biomass ~ 1`. The intercept-only model describes no directional change over time for either the observed or abundance-driven dynamics. 
 
-We selected the best-fitting model using AICc. In instances where multiple models had AICc scores within two AICc units of each other, we selected the simplest model within two units of the best score.
+We selected the best-fitting model using AICc. In instances where multiple models had AICc scores within two AICc units of the best-fitting model, we selected the simplest model within two units of the best score.
 
-For each route's best-fitting model, we extracted the predicted values for the first (usually 1988) and last (usually 2018) year sampled, for both the observed and null trajectories. We calculated the magnitude of change over time as the ratio of the last (2018) to the first (1988) value, and characterized the direction of the long-term trend as increasing if this ratio was greater than one, and decreasing if it was less than one. 
+For each route's selected model, we extracted the predicted values for the first (usually 1988) and last (usually 2018) year sampled, for both the observed and null trajectories. We calculated the magnitude of change over time as the ratio of the last (2018) to the first (1988) value, and characterized the direction of the long-term trend as increasing if this ratio was greater than one, and decreasing if it was less than one. 
 
 ## Relating change in community structure to decoupling between abundance and size-based dynamics
 
-Community dissimilarity metrics are most interpretable when making pairwise comparisons (as opposed to repeated compasions over a timeseries). We compared the first and last five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a consistent window of time across routes (19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, partially mitigates the impact of scenarios where the start and end values do not align with the long-term trend. 
+Community dissimilarity metrics are most readily interpretable when making pairwise comparisons (as opposed to repeated comparsions over a timeseries). We compared the first and last five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a relatively consistent window of time across routes (usually 19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, partially mitigates the impact of scenarios where the start and end values do not align with the long-term trend. 
 
 We calculated three metrics to explore how changes in community composition and size structure translate into decoupling between abundance-driven and observed dynamics for biomass and energy use.  First, we evaluated the change in average community-wide body size, calculated as the log ratio of mean body size in the last five years relative to the mean body size in the first five years:
 
@@ -69,9 +69,12 @@ $log(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
 
 where $\bar{m}_{last5}$ is the mean body size of all individuals observed in the last 5 timesteps. Large changes in average body size are, by definition, expected to translate into decoupling between observed and abundance-driven dynamics.
 
-Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD following an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians) to the raw, and extracting the fitted probability density at each possible body mass ranging from 0 to exp(15) g (following @thibault2010). We rescaled each density function to sum to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths and subtracted this quantity from 1. To evaluate turnover in species composition between the five-year time periods, we calculated Bray-Curtis dissimilarity between the two communities using the R package `vegan`. 
+Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD using a measure derived from an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians; following @thibault2011) to the raw distribution of body masses, and extracting the fitted probability density at 1000 evaluation points corresponding to body masses extending beyond the range of body masses present in this dataset (specifically, from 0 to 15 kilograms; mean body masses in this dataset range from 2.65 grams, for the Calliope hummingbird *Selasphorus calliope*, to 8.45 kg, for the California condor *Gymnogyps californianus*). We rescaled each density function such that the total probability density summed to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths as $\sum{\min(density1_i, density2_i)}$ where $density1_i$ is the probability density for the first ISD at evaluation point $i$, and $density2_i$ is the density smooth for the second ISD at that evaluation point. We subtracted this quantity from 1 to obtain a measure of turnover between two ISDs.
 
-We tested whether routes whose dynamics were best-described using different syndromes of change (no trend, couple trends, or decoupled trends) differed in 1) the magnitude of change in mean body size; 2) turnover in the ISD over time; or 3) species compositional turnover over time. For change in mean body size, we fit an ordinary linear model of the form `abs(log ratio (mean body size)) ~ best fitting model type`. We used the absolute log ratio so as to focus on the magnitude, rather than the direction, of change in body size. We compared this model to an intercept-only null model of the form `abs(log ratio(mean body size)) ~ 1`. Because our metrics for turnover in the ISD and species composition are bounded from 0-1, we analyzed these metrics using binomial generalized linear models of the form `ISD turnover ~ best fitting model type` and `dissimilarity ~ best fitting model type`, and again compared these models to intercept-only null models. In instances where the model fit with `best fitting model type` outperformed the intercept-only model, we calculated model estimates and contrasts using the R package `emmeans`. 
+
+To evaluate turnover in species composition between the five-year time periods, we calculated Bray-Curtis dissimilarity between the two communities using the R package `vegan` [@pinheiro2020]. 
+
+We tested whether routes whose dynamics were best-described using different syndromes of change (no trend, couple trends, or decoupled trends) differed in 1) the magnitude of change in mean body size; 2) turnover in the ISD over time; or 3) species compositional turnover over time. For change in mean body size, we fit an ordinary linear model of the form `abs(log ratio (mean body size)) ~ best fitting model type`. We used the absolute log ratio so as to focus on the magnitude, rather than the direction, of change in body size. We compared this model to an intercept-only null model of the form `abs(log ratio(mean body size)) ~ 1`. Because our metrics for turnover in the ISD and species composition are bounded from 0-1, we analyzed these metrics using binomial generalized linear models of the form `ISD turnover ~ best fitting model type` and `dissimilarity ~ best fitting model type`, and again compared these models to intercept-only null models. In instances where the model fit with `best fitting model type` outperformed the intercept-only model, we calculated model estimates and contrasts using the R package `emmeans` [@lenth2021]. 
 
 
 \newpage
